Zmiany zrobione podczas niedzielnego zebrania

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -706,6 +706,11 @@ width: 257px;
 	float: left;
 	overflow: hidden;
 	position: relative;
+	cursor: pointer;
+}
+
+#galleries .gallery.active .preview {
+	cursor: default;
 }
 
 #galleries .gallery .preview img {
