--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -1,35 +1,38 @@
 <div id="main_content_archive">
 
-<table>
-    <?php foreach ($this->entriesTable as $entries): ?>
-    <tr class="archive">
-    	<?php foreach ($entries as $entry) : ?>
-    	<td>
-		    <div id="main_content_archive_picture">
-				<img  class="archive" src="<?php echo $entry->getPictureNameSmall() ? 
-			     	$entry->getPictureNameSmall() :
-			     	'/images/www_leyout_buffet_buffet_text.gif' ?>">
-		    </div>
-			
-		    <div id="main_content_archive_cont">
-			    <a href="<?php echo $this->url(array('controller'=>'archive', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>$_SESSION['lang']), null, true);?>">
-			    <p class="archive_title">
-			    	<?php echo $entry->getDate() ?>
-			    	<?php echo $entry->getTitleLng() ?>	
-			    </p>
-			    </a>
-			    
-			    <p class="archive_pre_content"><?php echo $entry->getPreContent() ?></p>
-		    </div>
-		    
-		    <div id="main_content_news_go">
-		    	<div id="main_content_go">...</div>
-		    	<a class="main_content_rectangle_go" href="<?php echo $this->url(array('controller'=>'archive', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>$_SESSION['lang']), null, true);?>"> </a>
-		    </div>
-    	</td>
-    	<?php endforeach; ?>
-    </tr>
-    <?php endforeach ?>
-</table>
+	<table>
+		<?php foreach ($this->entriesTable as $entries): ?>
+			<tr class="archive">
+				<?php foreach ($entries as $entry) : ?>
+					<td>
+						<div id="main_content_archive_picture">
+							<img  class="archive" src="<?php echo $entry->hasArchivePicture() ? $entry->getArchivePictureName() : 
+										'/images/www_leyout_buffet_buffet_text.gif' ?>">
+						</div>
+
+						<div id="main_content_archive_cont">
+							<a href="<?php echo $this->url(
+									array('controller' => 'archive', 'action' => 'details',
+										'id' => $entry->getId(), 'lang' => $_SESSION['lang']), null, true); ?>">
+								<p class="archive_title">
+									<?php echo $entry->getDate() ?>
+									<?php echo $entry->getTitleLng() ?>
+								</p>
+							</a>
+
+							<p class="archive_pre_content"><?php echo $entry->getPreContent() ?></p>
+						</div>
+
+						<div id="main_content_news_go">
+							<div id="main_content_go">...</div>
+							<a class="main_content_rectangle_go" href="<?php echo $this->url(
+									array('controller' => 'archive', 'action' => 'details',
+										'id' => $entry->getId(), 'lang' => $_SESSION['lang']), null, true); ?>"> </a>
+						</div>
+					</td>
+			<?php endforeach; ?>
+			</tr>
+<?php endforeach ?>
+	</table>
 
 </div>
