Dodanie datepickera w formularzu eventu

--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -12,6 +12,7 @@
 		->prependFile('/js/admin.js')
 		->prependFile('/cleditor/jquery.cleditor.js')
 		->prependFile('/js/jquery.Jcrop.min.js')
+		->prependFile('/js/jquery-ui-timepicker.js')
 		->prependFile('/js/jquery-ui-1.8.18.min.js')
 		->prependFile('/js/jquery-1.7.2.min.js') ?>
 </head>
