--- a/application/modules/admin/views/scripts/event/edit.phtml
+++ b/application/modules/admin/views/scripts/event/edit.phtml
@@ -14,3 +14,5 @@ elseif ($_SESSION['event_kind']=='archive'){
 	<?php echo $this->form ?>
 
 </div>
+
+<?php echo $this->partial('event/_datepicker.phtml'); ?>
