Udostepnienie strony podcast i partnerzy

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -23,7 +23,7 @@
 						<!--<a href="<?php echo $this->url(array('controller'=>'offer', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">--><?php echo $this->translate('OFFER') ?><!--</a>-->
 					</li>
 					<li>
-						<!-- <a href="<?php echo $this->url(array('controller'=>'partners', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">--><?php echo $this->translate('PARTNERS') ?><!--</a>-->
+						<a href="<?php echo $this->url(array('controller'=>'partners', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>"><?php echo $this->translate('PARTNERS') ?></a>
 					</li>
 					<li>
 						<!--a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">--><?php echo $this->translate('NEWSLETTER') ?><!--</a>-->
@@ -35,7 +35,7 @@
 						<a href="http://vimeo.com/user10915565" target="_blank"><?php echo $this->translate('VIMEO') ?></a>
 					</li>
 					<li>
-						<!--<a href="<?php echo $this->url(array('controller'=>'podcast', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">--><?php echo $this->translate('PODCAST') ?><!--</a>-->
+						<a href="http://soundcloud.com/buffet-1" target="_blank"><?php echo $this->translate('PODCAST') ?></a>
 					</li>
 				</ul>
 			</div>
