Usunięcie linku VIDEO z górnego menu, zamiana VIMEO na VIDEO w menu bocznym

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -32,7 +32,7 @@
 						<a href="http://www.facebook.com/BUFFETklub" target="_blank"><?php echo $this->translate('FACEBOOK') ?></a>
 					</li>
 					<li>
-						<a href="http://vimeo.com/user10915565" target="_blank"><?php echo $this->translate('VIMEO') ?></a>
+						<a href="http://vimeo.com/user10915565" target="_blank"><?php echo $this->translate('VIDEO') ?></a>
 					</li>
 					<li>
 						<a href="http://soundcloud.com/buffet-1" target="_blank"><?php echo $this->translate('PODCAST') ?></a>
@@ -59,9 +59,6 @@
 								</li>
 								<li class="menu_poziome">
 									<a href="<?php echo $this->url(array('controller'=>'gallery', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>"><?php echo $this->translate('FOTO') ?></a>
-								</li>
-								<li class="menu_poziome">
-									<!--<a href="<?php echo $this->url(array('controller'=>'video', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">--><?php echo $this->translate('VIDEO') ?><!--</a>-->
 								</li>
 								<li class="menu_poziome">
 									<!--<a href="<?php echo $this->url(array('controller'=>'card', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">--><?php echo $this->translate('CARD') ?><!--</a>-->
