Edycja daty w galerii.

--- a/application/modules/admin/views/scripts/event/_datepicker.phtml
+++ b/application/modules/admin/views/scripts/event/_datepicker.phtml
@@ -1,6 +1,6 @@
 <script>
 	$(function() {
-		$('[id^="date_"]').datetimepicker({
+		$('[id^="date_"],[id="folder_date"]').datetimepicker({
 			dateFormat: 'yy-mm-dd',
 			showTime: false,
 			showTimepicker: false,
