--- a/application/modules/admin/views/scripts/gallery/_gallery-info.phtml
+++ b/application/modules/admin/views/scripts/gallery/_gallery-info.phtml
@@ -9,6 +9,10 @@
 			<td>Opis Galerii</td>
 			<td><?php echo $this->gallery->getFolderContent() ?></td>
 		</tr>
+		<tr>
+			<td>Data Galerii</td>
+			<td><?php echo $this->gallery->getFolderDate() ?></td>
+		</tr>
 	</table>
 	<a href="<?php echo $this->url(array('action' => 'edit', 'id' => $this->gallery->getId())); ?>" class="button">
 		Edytuj <img src="/images/edit.jpg" />
